--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 asgiref==3.8.1
 Django==5.1.6
+django-cors-headers==4.7.0
+django-fast-update==0.2.3
+django-filter==24.3
+djangorestframework==3.15.2
+djangorestframework_simplejwt==5.4.0
 mysqlclient==2.2.7
+psycopg2==2.9.10
+PyJWT==2.10.1
 sqlparse==0.5.3
+typing_extensions==4.12.2
 tzdata==2025.1
